--- a/frontend/src/app/src/app/login-page/login-form/login-form.html
+++ b/frontend/src/app/src/app/login-page/login-form/login-form.html
@@ -5,21 +5,28 @@
     <div class="form-group">
       <label for="email">Email:</label>
       <input id="email" type="email" formControlName="email" placeholder="Podaj email" />
-      <div class="error" *ngIf="loginForm.get('email')?.invalid && loginForm.get('email')?.touched">
-        Podaj poprawny email
-      </div>
+      @if(loginForm.get('email')?.invalid && loginForm.get('email')?.touched){
+        <div class="error">
+          Podaj poprawny email
+        </div>
+      }
     </div>
 
     <div class="form-group">
       <label for="password">Hasło:</label>
       <input id="password" type="password" formControlName="password" placeholder="Podaj hasło" />
-      <div class="error" *ngIf="loginForm.get('password')?.invalid && loginForm.get('password')?.touched">
-        Hasło jest wymagane
-      </div>
+      @if(loginForm.get('password')?.invalid && loginForm.get('password')?.touched){
+        <div class="error">
+          Hasło jest wymagane
+        </div>
+      }
+
     </div>
 
     <button type="submit" [disabled]="isLoading">Zaloguj</button>
   </form>
-
-  <p class="error" *ngIf="errorMessage">{{ errorMessage }}</p>
+  @if(errorMessage){
+    <p class="error">{{ errorMessage }}</p>
+  }
+  <a routerLink="/register">Register</a>
 </div>
