Added whoami endpoint to backend. Added mechanism to retrieve user information from backend, based on jwtToken.

--- a/frontend/src/app/src/app/main-page/main-page.html
+++ b/frontend/src/app/src/app/main-page/main-page.html
@@ -1,2 +1,6 @@
-<p>main-page works!</p>
+@if (userInfo) {
+  <h1>Witaj, {{ this.userInfo["username"] }}</h1>
+} @else {
+  <p>Ładowanie danych użytkownika...</p>
+}
 <logout-btn></logout-btn>
