--- a/frontend/src/app/src/app/register-page/register-form/register-form.html
+++ b/frontend/src/app/src/app/register-page/register-form/register-form.html
@@ -1,15 +1,12 @@
 <form class="form" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
   <div class="field">
     <label class="label">Username
-      <input type="text" class="input" formControlName="username"/>
+      <input type="text" class="input" placeholder="username" formControlName="username"/>
     </label>
-    @if(isFieldInvalid('username')){
-      <span>Pole niepoprawne</span>
-    }
   </div>
   <div class="field">
     <label class="label">Email
-      <input type="text" class="input" formControlName="email"/>
+      <input type="text" class="input" placeholder="email@mail.com" formControlName="email"/>
     </label>
     @if(isFieldInvalid('email')){
       <span>Pole niepoprawne</span>
@@ -17,18 +14,16 @@
   </div>
   <div class="field">
     <label class="label">Password
-      <input type="text" class="input" formControlName="password"/>
+      <input type="password" class="input" placeholder="password" formControlName="password"/>
     </label>
-    @if(isFieldInvalid('password')){
-      <span>Pole niepoprawne</span>
-    }
+
   </div>
   <div class="field">
     <label class="label">Repeat password
-      <input type="text" class="input" formControlName="repeat_password"/>
+      <input type="password" class="input" placeholder="repeat password" (focus)="onRepeatPasswordFocus()" formControlName="repeat_password"/>
     </label>
-    @if(isFieldInvalid('repeat_password')){
-      <span>Pole niepoprawne</span>
+    @if(passwordsDidNotMatch){
+      <span>Podane hasła są niezgodne</span>
     }
   </div>
 
