Added teams and project pages to frontend. Project page needs to be secured to not allowed looking at projects that user is not a member of.

--- a/frontend/src/app/pages/main-page/main-page.html
+++ b/frontend/src/app/pages/main-page/main-page.html
@@ -3,4 +3,10 @@
 } @else {
   <p>Ładowanie danych użytkownika...</p>
 }
-<logout-btn></logout-btn>
+<div>
+  <logout-btn></logout-btn>
+</div>
+<div>
+  <team-list></team-list>
+</div>
+
