--- a/frontend/src/app/pages/project-page/project-list/project-list.html
+++ b/frontend/src/app/pages/project-page/project-list/project-list.html
@@ -2,7 +2,7 @@
   @if(projects.length != 0) {
     <div class="projects">
       @for(project of projects; track project.id){
-        <project-tile [projectObject]="project"></project-tile>
+        <project-tile [projectObject]="project" (projectClicked)="handleClickedProject($event)"></project-tile>
       }
     </div>
   } @else {
