--- a/frontend/src/app/pages/project-page/project-tile/project-tile.html
+++ b/frontend/src/app/pages/project-page/project-tile/project-tile.html
@@ -1,4 +1,4 @@
-<article class="project-tile">
+<article class="project-tile" (click)="onClickedTile()">
   <h3>{{projectObject.name}}</h3>
   <p>{{projectObject.description}}</p>
   <p>Owner: {{projectObject.owner.name}}</p>
