Added angular material for pre-prepared html elements. Added rest endpoints to backend for proper frontend elements display. Added add task and assignation change options to frontend.

--- a/frontend/src/app/pages/task-page/task-tile/task-tile.html
+++ b/frontend/src/app/pages/task-page/task-tile/task-tile.html
@@ -8,5 +8,6 @@
     <option value="Done">Done</option>
   </select>
   <small>Assigned: {{assignedUsersUsernames}}</small>
+  <button (click)="openTaskEditModal()">Edit</button>
 </article>
 
