Added kanban table to frontend

--- a/frontend/src/app/pages/project-page/project-page.html
+++ b/frontend/src/app/pages/project-page/project-page.html
@@ -1,4 +1,6 @@
-<return-btn [returnPath]="'/main-page'"></return-btn>
+<button-panel>
+  <return-btn [returnPath]="'/main-page'"></return-btn>
+</button-panel>
 <div>
   <project-list [teamId]="teamId"></project-list>
 </div>
