--- a/frontend/src/app/pages/task-page/task-page.html
+++ b/frontend/src/app/pages/task-page/task-page.html
@@ -1,5 +1,8 @@
-<return-btn [returnPath]="'/teams/'+this.teamId"></return-btn>
-<button class="add-task-btn" (click)="openModal()">Add task</button>
+<button-panel>
+  <return-btn [returnPath]="'/teams/'+this.teamId"></return-btn>
+  <button class="add-task-btn" (click)="openModal()">Add task</button>
+</button-panel>
+
 <div>
   <task-list [projectId]="projectId"></task-list>
 </div>
