Fixed overall look. Fixed user info cashing issues.

--- a/frontend/src/app/common-components/logout-btn/logout-btn.html
+++ b/frontend/src/app/common-components/logout-btn/logout-btn.html
@@ -1,1 +1,8 @@
-<button (click)="logoutUser()">Log out</button>
+<div class="logout-container">
+  @if (userName$ | async; as name) {
+    <p>{{ name }}</p>
+  }
+  <button (click)="logoutUser()">log out</button>
+</div>
+
+
