--- a/frontend/src/app/pages/welcome-page/welcome-page.html
+++ b/frontend/src/app/pages/welcome-page/welcome-page.html
@@ -1,4 +1,12 @@
 <div class="home-container">
-  <h1>Welcome to Task Table</h1>
-  <button (click)="goToLogin()">Log in</button>
+  <header class="app-header">
+    <h1>Task Table</h1>
+  </header>
+
+  <div class="cta-actions">
+    <button class="btn-primary" (click)="goToLogin()">
+        Zaloguj się
+    </button>
+  </div>
+
 </div>
