--- a/frontend/src/app/common-components/button-panel/button-panel.css
+++ b/frontend/src/app/common-components/button-panel/button-panel.css
@@ -2,5 +2,7 @@
   display: flex;
   gap: 15px;
   align-items: center;
-  margin: 5px 5px
+  width: 100%;
+  padding: 5px 5px;
+  background-color: #AAC9DF;
 }
