--- a/frontend/src/app/pages/main-page/main-page.html
+++ b/frontend/src/app/pages/main-page/main-page.html
@@ -1,11 +1,14 @@
-@if (userInfo) {
-  <h1>Witaj, {{ this.userInfo["username"] }}</h1>
-} @else {
-  <p>Ładowanie danych użytkownika...</p>
-}
-<div>
-  <logout-btn></logout-btn>
+<button-panel>
+  <logout-btn style="margin-left: auto;margin-right: 10px"></logout-btn>
+</button-panel>
+<div style="; width: 100%;display: flex;justify-content: center">
+  @if (userInfo) {
+    <h1>Witaj, {{ this.userInfo.username }}</h1>
+  } @else {
+    <p>Ładowanie danych użytkownika...</p>
+  }
 </div>
+
 <div>
   <team-list></team-list>
 </div>
