--- a/frontend/src/app/pages/main-page/team-list/team-list.html
+++ b/frontend/src/app/pages/main-page/team-list/team-list.html
@@ -1,6 +1,9 @@
 @if (joinedTeams) {
   @if(joinedTeams.length!=0){
-    <div class="teams">
+    <div style="display: flex">
+      <button class="filter-btn" (click)="openSortDialog()" style="margin-left: auto;margin-right: 10px">Filtruj</button>
+    </div>
+    <div class="tile-list">
       @for(joinedTeam of joinedTeams; track joinedTeam.team.team_id){
         <team-tile [teamAndJoinDate]="joinedTeam" (teamClicked)="handleClickedTeam($event)"></team-tile>
       }
