--- a/frontend/src/app/pages/main-page/main-page.html
+++ b/frontend/src/app/pages/main-page/main-page.html
@@ -10,6 +10,7 @@
 </div>
 
 <div>
-  <team-list></team-list>
+  <button style="margin-left: auto;margin-right: 10px" (click)="openCreateTeamModal()">Utwórz zespół</button>
+  <team-list #teamList></team-list>
 </div>
 
