Dodano dodawanie i usuwanie projektów

--- a/frontend/src/app/pages/main-page/main-page.html
+++ b/frontend/src/app/pages/main-page/main-page.html
@@ -10,7 +10,7 @@
 </div>
 
 <div>
-  <button style="margin-left: auto;margin-right: 10px" (click)="openCreateTeamModal()">Utwórz zespół</button>
+  <button class="create-team-btn" style="margin-left: auto;margin-right: 10px" (click)="openCreateTeamModal()">Utwórz zespół</button>
   <team-list #teamList></team-list>
 </div>
 
