--- a/frontend/src/app/pages/main-page/team-list/team-list.css
+++ b/frontend/src/app/pages/main-page/team-list/team-list.css
@@ -19,3 +19,28 @@
 .tile-list{
   margin: 5px
 }
+
+.delete-team-btn{
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  cursor: pointer;
+  background-image: url("/images/trash_can_icon.png");
+  background-size: 70%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: transparent;
+}
+
+.delete-team-btn:hover{
+  background-color: #EDEDED;
+}
+
+.delete-team-btn:active{
+  background-size: 65%;
+}
+
+
+
