--- a/frontend/src/app/pages/project-page/project-tile/project-tile.css
+++ b/frontend/src/app/pages/project-page/project-tile/project-tile.css
@@ -1,3 +1,8 @@
+:host{
+  display: block;
+  flex-grow: 1;
+}
+
 .project-tile {
   padding: 1rem;
   border-radius: 12px;
@@ -10,6 +15,8 @@
   flex-direction: row;
   gap: 0.5rem;
 }
+
+
 
 .project-tile:hover {
   background-color: #999999;
