--- a/frontend/src/app/pages/task-page/task-list/task-list.css
+++ b/frontend/src/app/pages/task-page/task-list/task-list.css
@@ -62,3 +62,21 @@
   font-style: italic;
   padding: 15px 0;
 }
+
+.filter-btn{
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px 18px;
+  background-color: #28a745;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  font-size: 12px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.1s ease;
+  box-shadow: 0 4px 10px rgba(40, 167, 69, 0.3);
+  text-transform: uppercase;
+  letter-spacing: 0.5px
+}
