--- a/frontend/src/app/pages/main-page/team-list/team-list.html
+++ b/frontend/src/app/pages/main-page/team-list/team-list.html
@@ -4,25 +4,25 @@
       <button class="filter-btn" (click)="openSortDialog()" style="margin-left: auto;margin-right: 10px">Filtruj</button>
     </div>
     <div class="tile-list">
-      <div>
-        <h3>Owned teams</h3>
-        @for(team of ownedTeams; track team.team.team_id){
-          <div style="display: flex;width: 100%; align-items: center;">
+      @if(ownedTeams.length!=0){
+        <div>
+          <h3>Owned teams</h3>
+          @for(team of ownedTeams; track team.team.team_id){
+            <div style="display: flex;width: 100%; align-items: center;">
+              <team-tile [teamAndJoinDate]="team" (teamClicked)="handleClickedTeam($event)"></team-tile>
+              <button class="delete-team-btn" (click)="deleteTeam(team)"></button>
+            </div>
+          }
+        </div>
+      }
+      @if(memberTeams.length!=0){
+        <div>
+          <h3>Teams</h3>
+          @for(team of memberTeams; track team.team.team_id){
             <team-tile [teamAndJoinDate]="team" (teamClicked)="handleClickedTeam($event)"></team-tile>
-            <button class="delete-team-btn" (click)="deleteTeam(team)"></button>
-          </div>
-        }
-      </div>
-
-      <div>
-        <h3>Teams</h3>
-        @for(team of memberTeams; track team.team.team_id){
-          <team-tile [teamAndJoinDate]="team" (teamClicked)="handleClickedTeam($event)"></team-tile>
-        }
-      </div>
-
-
-
+          }
+        </div>
+      }
     </div>
   } @else {
     <p>Team list is empty</p>
