--- a/frontend/src/app/pages/main-page/team-tile/team-tile.css
+++ b/frontend/src/app/pages/main-page/team-tile/team-tile.css
@@ -3,4 +3,24 @@
   flex-grow: 1;
 }
 
+.details-btn{
+  font-family: Andale Mono, monospace;
+  font-weight: 700;
+  margin-top: 5px;
+  margin-left: 10px;
+  border: none;
+  padding: 5px 25px;
+  border-radius: 10px 10px 0px 0px;
+  background-color: #D3EFF2;
+  transition: padding 0.3s ease-in-out, margin-top 0.3s ease-in-out;
+}
+
+.details-btn:hover{
+  margin-top: 1px;
+  border: none;
+  padding: 5px 25px 13px 25px;
+  cursor: pointer;
+
+}
+
 
