--- a/frontend/src/app/pages/main-page/team-tile/team-tile.html
+++ b/frontend/src/app/pages/main-page/team-tile/team-tile.html
@@ -1,7 +1,9 @@
 <div class="team-tile-container">
+  <button class="details-btn" (click)="openTeamDetailsModal()">Details</button>
   <article class="tile" (click)="onClickedTile()">
     <h3>{{teamAndJoinDate.team.name}}</h3>
     <p>{{teamAndJoinDate.team.description}}</p>
     <small>joined: {{teamAndJoinDate.join_date | date: 'dd.MM.yyyy'}}</small>
+
   </article>
 </div>
