Added team members management. Fixed login and registration page redirections.

--- a/frontend/src/app/pages/login-page/login-form/login-form.html
+++ b/frontend/src/app/pages/login-page/login-form/login-form.html
@@ -28,5 +28,6 @@
   @if(errorMessage){
     <p class="error">{{ errorMessage }}</p>
   }
-  <a routerLink="/register">Register</a>
+
+  <a routerLink="/register" [queryParams]="{ redirectTo: returnUrl }">Register</a>
 </div>
