--- a/frontend/src/app/pages/project-page/project-page.css
+++ b/frontend/src/app/pages/project-page/project-page.css
@@ -1,5 +1,5 @@
 .create-project-btn {
-  display: inline-flex;
+  display: flex;
   align-items: center;
   justify-content: center;
   padding: 8px 18px;
@@ -14,7 +14,8 @@
   box-shadow: 0 4px 10px rgba(40, 167, 69, 0.3);
   text-transform: uppercase;
   letter-spacing: 0.5px;
-  margin: 15px
+  align-self: flex-start;
+  margin-left: 10px;
 }
 
 .create-project-btn:hover {
