--- a/frontend/src/app/pages/task-page/edit-task-form/edit-task-form.html
+++ b/frontend/src/app/pages/task-page/edit-task-form/edit-task-form.html
@@ -30,6 +30,7 @@
     </div>
 
     <div class="dialog-actions">
+      <button class="delete-task-btn" (click)="deleteTask()">Delete task</button>
       <button type="button" class="cancel-btn" (click)="closeModal()">Anuluj</button>
       <button type="submit">Zapisz task</button>
     </div>
