--- a/frontend/src/app/pages/login-page/login-form/login-form.html
+++ b/frontend/src/app/pages/login-page/login-form/login-form.html
@@ -1,33 +1,33 @@
 <div class="login-container">
-  <h2>Logowanie</h2>
+  <h2>Sign in</h2>
 
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="email">Email:</label>
-      <input id="email" type="email" formControlName="email" placeholder="Podaj email" />
+      <input id="email" type="email" formControlName="email" placeholder="Enter email" />
       @if(loginForm.get('email')?.invalid && loginForm.get('email')?.touched){
         <div class="error">
-          Podaj poprawny email
+          Enter valid email
         </div>
       }
     </div>
 
     <div class="form-group">
       <label for="password">Hasło:</label>
-      <input id="password" type="password" formControlName="password" placeholder="Podaj hasło" />
+      <input id="password" type="password" formControlName="password" placeholder="Enter password" />
       @if(loginForm.get('password')?.invalid && loginForm.get('password')?.touched){
         <div class="error">
-          Hasło jest wymagane
+          Password required
         </div>
       }
 
     </div>
 
-    <button type="submit" [disabled]="isLoading">Zaloguj</button>
+    <button type="submit" [disabled]="isLoading">Sign in</button>
   </form>
   @if(errorMessage){
     <p class="error">{{ errorMessage }}</p>
   }
 
-  <a routerLink="/register" [queryParams]="{ redirectTo: returnUrl }">Register</a>
+  <a routerLink="/register" [queryParams]="{ redirectTo: returnUrl }">Sign up</a>
 </div>
