--- a/frontend/src/app/pages/main-page/main-page.html
+++ b/frontend/src/app/pages/main-page/main-page.html
@@ -9,8 +9,8 @@
   }
 </div>
 
-<div>
-  <button class="create-team-btn" style="margin-left: auto;margin-right: 10px" (click)="openCreateTeamModal()">Utwórz zespół</button>
+<div style="display: flex; flex-direction: column">
+  <button class="create-team-btn" (click)="openCreateTeamModal()">Utwórz zespół</button>
   <team-list #teamList></team-list>
 </div>
 
