--- a/frontend/src/app/pages/main-page/team-details/team-invitation-dialog/team-invitation-dialog.css
+++ b/frontend/src/app/pages/main-page/team-details/team-invitation-dialog/team-invitation-dialog.css
@@ -4,8 +4,8 @@
   border-radius: 12px;
   box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
 
-  max-width: 30vw;
-  width: 30vw;
+  max-width: 35vw;
+  width: 35vw;
 
   max-height: 25vh;
   height: 25%;
@@ -33,7 +33,35 @@
 .invitation-code-space {
   display: flex;
   justify-content: center;
-  background-color: #a0a0a0;
-  padding: 1px 5px;
+  background-color: #EDFBFF;
+  padding: 10px 15px;
   border-radius: 10px 10px;
+}
+
+.copy-text{
+  font-family: Andale Mono, monospace;
+  font-weight: 500;
+  user-select: all;
+  cursor: pointer;
+}
+
+.small-btn {
+  margin-top: -5px;
+  background-color: #007bff;
+  color: white;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 12px;
+  font-weight: 500;
+  transition: background-color 0.2s, transform 0.1s, font-size 0.2s, transform 0.1s;
+}
+
+.small-btn:hover {
+  background-color: #0056b3;
+}
+
+.small-btn:active{
+  font-size: 11px;
 }
