--- a/frontend/src/app/pages/main-page/team-list/team-list.css
+++ b/frontend/src/app/pages/main-page/team-list/team-list.css
@@ -32,6 +32,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-color: transparent;
+  margin-top: 27px;
 }
 
 .delete-team-btn:hover{
