--- a/frontend/src/app/pages/main-page/team-list/team-list.html
+++ b/frontend/src/app/pages/main-page/team-list/team-list.html
@@ -1,7 +1,7 @@
 @if (joinedTeams) {
   @if(joinedTeams.length!=0){
     <div style="display: flex">
-      <button class="filter-btn" (click)="openSortDialog()" style="margin-left: auto;margin-right: 10px">Filtruj</button>
+      <button class="filter-btn" (click)="openSortDialog()" style="margin-left: auto;margin-right: 10px">Sort</button>
     </div>
     <div class="tile-list">
       @if(ownedTeams.length!=0){
