--- a/frontend/src/app/pages/project-page/create-project-dialog/create-project-dialog.html
+++ b/frontend/src/app/pages/project-page/create-project-dialog/create-project-dialog.html
@@ -5,11 +5,7 @@
     <div class="form-group">
       <label for="name">Project name</label>
       <input id="name" formControlName="name"/>
-      @if(createProjectForm.get('name')?.invalid && createProjectForm.get('name')?.touched){
-        <div class="error">
-          Nazwa nie może być pusta!
-        </div>
-      }
+      <span class="error">{{createProjectForm.get('name')?.invalid && createProjectForm.get('name')?.touched ? "Project name is required!" : "\u00A0"}}</span>
     </div>
 
     <div class="form-group">
@@ -18,8 +14,8 @@
     </div>
 
     <div class="dialog-actions">
-      <button type="button" class="cancel-btn" (click)="closeModal()">Anuluj</button>
-      <button type="submit">Utwórz projekt</button>
+      <button type="button" class="cancel-btn" (click)="closeModal()">Cancel</button>
+      <button type="submit">Create</button>
     </div>
   </form>
 
