--- a/frontend/src/app/pages/project-page/project-list/project-list.html
+++ b/frontend/src/app/pages/project-page/project-list/project-list.html
@@ -1,14 +1,31 @@
 @if (projects) {
   @if(projects.length != 0) {
+    <div style="display: flex">
+      <button class="filter-btn" (click)="openSortDialog()" style="margin-left: auto;margin-right: 10px">Sort</button>
+    </div>
     <div class="tile-list">
-      @for(project of projects; track project.id){
-        <div style="display: flex;width: 100%; align-items: center;">
-          <project-tile [projectObject]="project" (projectClicked)="handleClickedProject($event)"></project-tile>
-          @if(project.owner.email === loggedUserEmail){
-            <button class="delete-project-btn" (click)="deleteProject(project)"></button>
+      @if(ownedProjects.length!=0){
+        <div>
+          <h3>Owned projects</h3>
+          @for(project of ownedProjects; track project.id){
+            <div style="display: flex;width: 100%; align-items: center;">
+              <project-tile [projectObject]="project" (projectClicked)="handleClickedProject($event)"></project-tile>
+              <button class="delete-project-btn" (click)="deleteProject(project)"></button>
+            </div>
           }
         </div>
       }
+      @if(memberProjects.length!=0){
+        <div>
+          <h3>Projects</h3>
+          @for(project of memberProjects; track project.id){
+            <div style="display: flex;width: 100%; align-items: center;">
+              <project-tile [projectObject]="project" (projectClicked)="handleClickedProject($event)"></project-tile>
+            </div>
+          }
+        </div>
+      }
+
     </div>
   } @else {
     <p>Project list is empty</p>
