--- a/frontend/src/app/pages/project-page/project-page.html
+++ b/frontend/src/app/pages/project-page/project-page.html
@@ -2,8 +2,14 @@
   <return-btn [returnPath]="'/main-page'"></return-btn>
   <logout-btn style="margin-left: auto;margin-right: 10px"></logout-btn>
 </button-panel>
-
-<div>
-  <button class="create-project-btn" style="margin-left: auto;margin-right: 10px" (click)="openCreateProjectModal()">Utwórz projekt</button>
+<div style="; width: 100%;display: flex;justify-content: center">
+  @if (team) {
+    <h1>{{ team.name }}</h1>
+  } @else {
+    <p>Loading team data...</p>
+  }
+</div>
+<div style="display: flex;flex-direction: column">
+  <button class="create-project-btn" (click)="openCreateProjectModal()">Create Project</button>
   <project-list #projectList [teamId]="teamId"></project-list>
 </div>
