--- a/frontend/src/app/pages/project-page/project-tile/project-tile.html
+++ b/frontend/src/app/pages/project-page/project-tile/project-tile.html
@@ -1,6 +1,8 @@
-<article class="tile" (click)="onClickedTile()">
-  <h3>{{projectObject.name}}</h3>
-  <p>{{projectObject.description}}</p>
-  <p>Owner: {{projectObject.owner.name}}</p>
-  <small>State: {{projectObject.state}}</small>
-</article>
+<div class="project-tile-container">
+  <button class="details-btn" (click)="openProjectDetailsModal()">Details</button>
+  <article class="tile" (click)="onClickedTile()">
+    <h3>{{projectObject.name}}</h3>
+    <p>{{projectObject.description}}</p>
+    <small>{{projectObject.owner.name}}</small>
+  </article>
+</div>
