--- a/frontend/src/app/pages/register-page/register-form/register-form.html
+++ b/frontend/src/app/pages/register-page/register-form/register-form.html
@@ -1,33 +1,38 @@
-<form class="form" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-  <div class="field">
-    <label class="label">Username
-      <input type="text" class="input" placeholder="username" formControlName="username"/>
-    </label>
-  </div>
-  <div class="field">
-    <label class="label">Email
-      <input type="text" class="input" placeholder="email@mail.com" formControlName="email"/>
-    </label>
-    @if(isFieldInvalid('email')){
-      <span>Pole niepoprawne</span>
-    }
-  </div>
-  <div class="field">
-    <label class="label">Password
-      <input type="password" class="input" placeholder="password" formControlName="password"/>
-    </label>
+<div class="register-container">
+  <h2>Sign up</h2>
 
-  </div>
-  <div class="field">
-    <label class="label">Repeat password
-      <input type="password" class="input" placeholder="repeat password" (focus)="onRepeatPasswordFocus()" formControlName="repeat_password"/>
-    </label>
-    @if(passwordsDidNotMatch){
-      <span>Podane hasła są niezgodne</span>
-    }
-  </div>
+  <form class="form" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label class="label">Username
+        <input type="text" class="input" placeholder="Enter username" formControlName="username"/>
+      </label>
+    </div>
+    <div class="form-group">
+      <label class="label">Email
+        <input type="text" class="input" placeholder="Enter email" formControlName="email"/>
+      </label>
+      @if(registerForm.get('email')?.invalid && registerForm.get('email')?.touched){
+        <p class="error">Enter valid email</p>
+      }
+    </div>
+    <div class="form-group">
+      <label class="label">Password
+        <input type="password" class="input" placeholder="Enter password" formControlName="password"/>
+      </label>
 
-  <div>
-    <button type="submit" class="button">Register</button>
-  </div>
-</form>
+    </div>
+    <div class="form-group">
+      <label class="label">Repeat password
+        <input type="password" class="input" placeholder="Repeat password" (focus)="onRepeatPasswordFocus()" formControlName="repeat_password"/>
+      </label>
+      @if(passwordsDidNotMatch){
+        <p class="error">Passwords do not match</p>
+      }
+    </div>
+
+    <div>
+      <button type="submit" class="button">Register</button>
+    </div>
+  </form>
+
+</div>
