Task filtering bug fixes.

--- a/frontend/src/app/pages/main-page/team-list/team-list.html
+++ b/frontend/src/app/pages/main-page/team-list/team-list.html
@@ -25,7 +25,7 @@
       }
     </div>
   } @else {
-    <p>Team list is empty</p>
+    <p style="margin-left: 10px">Team list is empty</p>
   }
 } @else {
   <loading-animation/>
