--- a/frontend/src/app/pages/project-page/project-list/project-list.html
+++ b/frontend/src/app/pages/project-page/project-list/project-list.html
@@ -28,7 +28,7 @@
 
     </div>
   } @else {
-    <p>Project list is empty</p>
+    <p style="margin-left: 5px">Project list is empty</p>
   }
 } @else {
   <loading-animation/>
