--- a/frontend/src/app/pages/project-page/project-page.html
+++ b/frontend/src/app/pages/project-page/project-page.html
@@ -10,6 +10,9 @@
   }
 </div>
 <div style="display: flex;flex-direction: column">
-  <button class="create-project-btn" (click)="openCreateProjectModal()">Create Project</button>
+  @if(isOwner){
+    <button class="create-project-btn" (click)="openCreateProjectModal()">Create Project</button>
+  }
+
   <project-list #projectList [teamId]="teamId"></project-list>
 </div>
