--- a/frontend/src/app/pages/project-page/project-sort-dialog/project-sort-dialog.html
+++ b/frontend/src/app/pages/project-page/project-sort-dialog/project-sort-dialog.html
@@ -2,16 +2,16 @@
   <h2>Sort Projects</h2>
 
   <div class="form-field">
-    <label for="sortSelect">Kryterium sortowania:</label>
+    <label for="sortSelect">Sort criterion:</label>
 
     <select id="sortSelect" [(ngModel)]="selectedSort" class="sort-select">
-      <option value="name_asc">Nazwa (A-Z)</option>
-      <option value="name_desc">Nazwa (Z-A)</option>
+      <option value="name_asc">Name (A-Z)</option>
+      <option value="name_desc">Name (Z-A)</option>
     </select>
   </div>
 
   <div class="actions">
-    <button class="btn-cancel" (click)="close()">Anuluj</button>
-    <button class="btn-confirm" (click)="apply()">Zastosuj</button>
+    <button class="btn-cancel" (click)="close()">Cancel</button>
+    <button class="btn-confirm" (click)="apply()">Sort</button>
   </div>
 </div>
