--- a/frontend/src/app/pages/task-page/task-list/task-list.html
+++ b/frontend/src/app/pages/task-page/task-list/task-list.html
@@ -1,6 +1,6 @@
 @if (tasks) {
   <div style="display: flex">
-    <button class="filter-btn" (click)="openFilterModal()" style="margin-left: auto;margin-right: 10px">Filtruj</button>
+    <button class="filter-btn" (click)="openFilterModal()" style="margin-left: auto;margin-right: 10px">Filter</button>
   </div>
   <div class="kanban-board">
 
